# olio_26_viikkotehtavat

./: .gitignore  CMakeLists.txt  README.md  main.cpp
olio_viikkotehtava3/: CMakeLists.txt  chef.cpp  chef.h  italianchef.cpp  italianchef.h  main.cpp
olio_viikkotehtava_2/: CMakeLists.txt  game.cpp  game.h  main.cpp
olio_viikkotehtava_4/: CMakeLists.txt  asiakas.cpp  asiakas.h  luottotili.cpp  luottotili.h  main.cpp  pankkitili.cpp
olio_viikkotehtava_5/: CMakeLists.txt  main.cpp  notifikaattori.cpp  notifikaattori.h  seuraaja.cpp  seuraaja.h
olio_viikkotehtava_6/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui  student.cpp  student.h
olio_viikkotehtava_7/: mainwindow.h
olio_viikkotehtava_7_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
olio_viikkotehtava_8/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
viikko1/testi2/: CMakeLists.txt  main.cpp
